# FrontEmu-Tools

./: .gitignore  GIT-COMMANDS.md  README.md  RELATORIO_FINAL_V1.0.md  VERIFICATION-CHECKLIST.md  constraints.txt  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  test_final_validation.py  test_functionality.py  test_gui_integration.py
config/: config.json  emulator_mapping.json  enterprise_config.json  frontend_config.json  history_config.json  history_integration.json  path_config.json  path_resolver.py  platform_mapping.json  variant_mapping.json
config/templates/: PCSX2_Performance.json  RetroArch_Default.json
docs/: DRS-FrontEmu-Tools.md  PRODUCT_REQUIREMENTS.md  TECHNICAL_ARCHITECTURE.md  Technical-Design-Document.md  UI-UX-Overlay-Specifications.md  USER_GUIDE.md  Visual-Identity-Specifications.md
docs/uml/: Class-Diagram.md  Component-Diagram.md  Sequence-Diagram.md  Use-Case-Diagram.md
scripts/: generate_reports.py  history_maintenance.py  integrate_history_system.py  setup_history_system.py  test_history_system.py
src/: ADMIN_PRIVILEGES_FIXES_REPORT.md  test_admin_fixes.py
src/config/templates/: PCSX2_Performance.json  RetroArch_Default.json
src/sd_emulation_gui/: __init__.py
src/sd_emulation_gui/adapters/: __init__.py  config_loader.py  fs_adapter.py
src/sd_emulation_gui/app/: __init__.py  cli_handler.py  container.py  error_handler.py  factory.py  feedback_system.py  imports_manager.py  logging_config.py  main.py  optimized_logging.py  performance_manager.py
src/sd_emulation_gui/domain/: __init__.py  entities.py  models.py  path_types.py  sd_rules.py  use_cases.py
src/sd_emulation_gui/gui/: main_window.py
src/sd_emulation_gui/gui/components/: compliance_widget.py  coverage_widget.py  dashboard_widget.py  loader.py  migration_widget.py  navbar.py  (+2 more)
src/sd_emulation_gui/infrastructure/: __init__.py  adapters.py  dependency_container.py  repositories.py
src/sd_emulation_gui/interfaces/: data_interfaces.py  service_interfaces.py
src/sd_emulation_gui/services/: __init__.py  configuration_service.py  coverage_service.py  drive_detection_service.py  drive_manager_service.py  legacy_detection_service.py  migration_service.py  report_service.py  sd_emulation_service.py  system_info_service.py  system_stats_service.py  validation_service.py  validation_service_history_extension.py  variant_service.py
src/sd_emulation_gui/utils/: __init__.py  admin_utils.py  base_service.py  drive_utils.py  file_utils.py  path_utils.py  system_utils.py  validation_utils.py
src/sd_emulation_gui/validation/: validation_engine.py
tests/: conftest.py  test_base_service.py  test_config_loader.py  test_config_manager.py  test_dynamic_paths.py  test_e2e_application.py  test_e2e_migration.py  test_emulator_mapping.py  test_file_utils.py  test_fs_adapter.py  test_gui_components.py  test_improvements.py  test_logging_config.py  test_migration_service.py  test_path_resolver.py  test_path_types.py  test_path_utils.py  test_sd_emulation_service.py  test_sd_emulation_service_extended.py  test_validation_service.py  test_validation_utils.py  test_variant_service.py
(+14 files in other folders)
